--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 
-<body class="">
+<body class="bg-black">
 
     <!-- Nav Start -->
     <nav class=" z-50 ">
@@ -219,8 +219,8 @@
 
                 <!-- Right side start -->
                 <div class=" flex  lg:flex-col md:flex-row gap-5 md:gap-10 lg:gap-10 md:items-center lg:items-end px-auto md:px-40 lg:px-10">
-                    <img src="./images/join_us_01.png" alt="" class="lg:mr-20 flex-srink-0 w-1/2 h-auto md:min-w-40 object-cover">
-                    <img src="./images/join_us_02.png" alt="" class=" flex-srink-0 w-1/2 h-auto md:min-w-40 object-cover">
+                    <img src="./images/join_us_01.png" alt="" class="lg:mr-20 flex-srink-0 w-1/2 h-auto md:min-w-40 lg:max-w-60 object-cover">
+                    <img src="./images/join_us_02.png" alt="" class=" flex-srink-0 w-1/2 h-auto md:min-w-40 lg:max-w-60 object-cover">
                 </div>
                 <!-- Right side End -->
             </div>
