--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Assesment-2</title>
+    <title>BodyShape</title>
     <!-- Tailwind cdn Setup -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
@@ -167,13 +167,14 @@
                 <a href="" class="border border-[#FF921B] px-4 py-1 text-center">Select Plan</a>
             </div>
 
-            <div class="flex flex-col items-center gap-2 lg:gap-4 px-8 py-8  bg-gradient-to-b from-[#393939] to-[#393939]/0 transition-transform duration-200 hover:-translate-y-5">
+            <div class="flex flex-col items-center gap-2 lg:gap-4 px-8 py-8  bg-gradient-to-b from-[#393939] to-[#393939]/0 transition-transform duration-200 hover:-translate-y-5 relative">
                 <h1 class="text-2xl font-bold">Fit</h1>
                 <p class="text-sm">Plan Exp. 16/11/2025</p>
                 <h1 class="pt-8"> <i class="fa-solid fa-indian-rupee-sign text-lg"></i><span class="text-xl">1200
                         /</span> <span class="text-sm">Month</span></h1>
                 <p class="text-sm pb-8">Streaming</p>
                 <a href="" class="border border-[#FF921B] px-4 py-1 text-center">Select Plan</a>
+                <div class=" absolute text-black bg-white px-4 py-1 rounded-md -top-5"> Recomanded</div>
             </div>
 
             <div class="flex flex-col items-center gap-2 lg:gap-4 py-8 bg-gradient-to-b from-[#393939] to-[#393939]/0 transition-transform duration-200 hover:-translate-y-5">
